# agent-tools

./: .env.example  .gitignore  .skillignore  Makefile  README.md  package.json  pyproject.toml  skillshare-hub.json
.claude-plugin/: GENERATED.md  marketplace.json  plugin.json
.codex-plugin/: plugin.json
.cursor-plugin/: plugin.json
.github/workflows/: ci.yml  release-skill.yml
.opencode/: INSTALL.md
.opencode/plugins/: agent-tools.js  charms.js
commands/: README.md  codex-reset-credit.md  tutorial-extract.md  ui-bug-video.md  watch.md  x-bookmarks.md
docs/: README.md  adding-a-skill.md  agent-compatibility.md  agent-guidelines.md  architecture.md  chatgpt-pro-review.md  codex-reset-credit.md  decisions.md  distribution-targets.md  installing-skills.md  package-shape.md  reference-audit-claude-video.md  reference-audit-superpowers.md  releasing-a-skill.md  roadmap.md  security.md  skillshare.md  target-tool-mapping.md  updating-a-skill.md  watch-video.md  x-bookmarks.md
scripts/: audit-generated.sh  build-agent-skill.sh  build-claude-custom-skill.sh  build-claude-plugin.sh  build-codex-skill.sh  build-marketplace.sh  build-packages.sh  build-root-indexes.sh  build-skillshare-hub.py  bump-skill-version.py  check-version-policy.py  install-all.sh  install-claude.sh  install-codex.sh  test-groq.sh  verify-packages.sh  verify-skill-metadata.py
skills/: README.md  codex-reset-credit  watch-video  x-bookmarks
tests/: test_build_skillshare_hub.py  test_bump_skill_version.py  test_check_version_policy.py  test_verify_skill_metadata.py
(+13 files in other folders)
