[project]
name = "agent-tools"
version = "0.1.0"
description = "Personal agent tooling workspace."
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [
  { name = "Nagarjuna Boddu" }
]

[tool.pytest.ini_options]
testpaths = ["packages/watch-video/tests"]
python_files = ["test_*.py"]

[tool.ruff]
line-length = 100
target-version = "py311"
