[project]
name = "agent-tools"
version = "0.1.0"
description = "Public agent tooling workspace for skills, commands, plugins, and future MCP servers."
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [
  { name = "Nagarjuna Boddu" }
]

[tool.ruff]
line-length = 100
target-version = "py311"
