[project]
name = "charms"
version = "0.1.0"
description = "Public workspace of practical, installable charms: agent skills, commands, and Claude Code plugins."
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [
  { name = "Nagarjuna Boddu" }
]

[tool.ruff]
line-length = 100
target-version = "py311"
